--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-emoji": "^1.8.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-face-detector": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
